post: use font features for superscript/subscript

--- a/src/ui/stylesheets/global.styl
+++ b/src/ui/stylesheets/global.styl
@@ -32,6 +32,14 @@ a
 	color inherit
 address
 	font-style normal
+sub
+	font-feature-settings 'subs'
+	font-size inherit
+	vertical-align baseline
+sup
+	font-feature-settings 'sups'
+	font-size inherit
+	vertical-align baseline
 
 // Verbatim text
 blockquote
