post: work on layout

--- a/src/ui/components/content/Headline.pug
+++ b/src/ui/components/content/Headline.pug
@@ -21,7 +21,8 @@ style.
 	.headline
 		box-sizing border-box
 		overflow-wrap anywhere
-		padding 2ch
+		padding 1em 2em
+		text-align right
 		&.selected
 			background rgba(0,0,0,0.1)
 	address
