--- a/src/ui/components/system/ActionText.pug
+++ b/src/ui/components/system/ActionText.pug
@@ -6,4 +6,9 @@ button {text}
 style.
 	button
 		background inherit
+		border 1px solid
+		border-radius 12px
 		color rgb(64,84,199) // Indigo-D 4-16
+		height 24px
+		opacity 0.75
+		padding 0 12px
