--- a/src/ui/components/content/Comment.pug
+++ b/src/ui/components/content/Comment.pug
@@ -5,62 +5,54 @@ script.
 	import Avatar from './Avatar.pug'
 	import Score from './Score.pug'
 	export id = null
+	export showReplies = true
 	comment = null
 	api.watch(id, (x) -> { data: comment } = x)
 
 {#if comment}
-	.comment-tree
-		article.comment(role='comment')
-			.comment-gutter
-				.comment-author
-					Avatar(username={comment.author})
-			.comment-main
-				.comment-meta
-					Score(value={comment.score_hidden || comment.score})
-				.comment-body
-					{@html StringFormat.commentBody(comment.body_html)}
-		{#if comment.replies.length > 0}
-			ol.comment-replies
-				{#each comment.replies as replyId}
-					svelte:self(id={replyId})
-				{#if comment.more_replies}
-					.comment-expand-replies
-						ActionText(text='More replies...')
-				{#if comment.deeper_replies}
-					.comment-expand-replies
-						ActionText(text='Continue this thread...')
+	<!-- 'comment' role is draft status and not recognized yet -->
+	<!-- svelte-ignore a11y-unknown-role -->
+	article.comment(role='comment')
+		.comment-layout-indent
+			Avatar(username={comment.author})
+			button.comment-line-separator
+		.comment-layout-core
+			.comment-body
+				{@html StringFormat.commentBody(comment.body_html)}
+			{#if showReplies && comment.replies.length > 0}
+				ol.comment-replies
+					{#each comment.replies as replyId}
+						svelte:self(id={replyId})
+					{#if comment.more_replies}
+						.comment-more-replies
+							ActionText(text="+ {comment.more_replies.length} more {comment.more_replies.length === 1 ? 'reply' : 'replies'}...")
+					{#if comment.deeper_replies}
+						.comment-more-replies
+							ActionText(text='→ Continue this thread...')
 
 style.
-	.actions-button
-		background transparent
-		float right
-		font 13px 'roboto mono'
-		letter-spacing 0
-		margin-right 1ch
-		opacity 0
 	.comment
 		display flex
 		gap 1ch
+		margin-top 2em
 		position relative
 	.comment-body
 		max-width 450px
-		overflow-wrap anywhere
+		white-space pre-wrap
 	:global(.comment-body img)
-		border-radius 4px
+		border-radius 6px
 		display inline
-		filter grayscale(1)
+		margin-block-start 1px
 		margin-inline-start 1px
-		max-height 4em
+		max-height 9em
 		width auto
-	.comment-expand-replies
-		margin-top 1em
-	.comment-meta
+	.comment-layout-indent
 		display flex
-		display none
-		gap 1ch
-	.comment-replies
-		border-left 1px solid gainsboro
-		margin-inline-start 1em
-		padding-inline-start 3ch
-	.comment-tree
+		flex 0 0 24px
+		flex-flow column nowrap
+	.comment-line-separator
+		background linear-gradient(to right, transparent 11px, currentColor 11px, currentColor 13px, transparent 13px)
+		flex 1
+		opacity 0.1
+	.comment-more-replies
 		margin-top 2em
