--- a/src/ui/stylesheets/global.styl
+++ b/src/ui/stylesheets/global.styl
@@ -19,17 +19,16 @@ body
 	margin 0
 
 // Paragraphs
-p
-	margin-top 0.5em
 hr
 	background currentColor
 	border 0
 	height 1px
-	margin 1em 0
+	margin 0
 
 // Formatted text
 a
 	color inherit
+	word-break break-all
 address
 	font-style normal
 
@@ -37,16 +36,15 @@ address
 blockquote
 	border-left 2px solid gainsboro
 	margin 0
-	margin-top 0.5em
 	opacity 0.75
 	padding-inline-start 1ch
 code
 	font inherit
 pre
+	background repeating-linear-gradient(45deg, rgba(0,0,0,0.1), transparent 1px, transparent 0.5em), repeating-linear-gradient(-45deg, rgba(0,0,0,0.1), transparent 1px, transparent 0.5em)
 	display inline-block
 	font 12px 'roboto mono'
-	margin-top 0.66em
-	white-space pre-wrap
+	white-space pre
 
 // Spoilers
 .md-spoiler-text
@@ -68,11 +66,11 @@ menu
 	padding 0
 ol
 	list-style decimal
-	margin-top 0.5em
+	margin 0
 	padding-inline-start 3ch
 ul
 	list-style disc
-	margin-top 0.5em
+	margin 0
 	padding-inline-start 3ch
 
 // Headers
@@ -84,7 +82,7 @@ h5
 h6
 	font-size 1.16em
 	font-weight bold
-	margin-top 1em
+	margin 0
 h1
 	font-size 1.33em
 
@@ -93,8 +91,9 @@ table
 	border-collapse collapse
 	font-size 12px
 	line-height 15px
-	margin-top 1em
 	white-space pre-wrap
+thead
+	text-align left
 td
 th
 	padding 0.5em 2ch 0.5em 0
@@ -124,6 +123,7 @@ button
 	letter-spacing inherit
 	line-height inherit
 	padding 0
+	white-space pre
 	word-spacing inherit
 input
 	border 0
@@ -133,6 +133,7 @@ input
 	line-height inherit
 	margin 0
 	padding 0
+	white-space pre
 	word-spacing inherit
 
 // Fonts
