internals: reorg files

--- a/src/ui/infra/Router.pug
+++ b/src/ui/infra/Router.pug
@@ -1,5 +1,5 @@
 script.
-	import Listing from './components/layouts/Listing.pug'
+	import Listing from '../product/listing/Listing.pug'
 	import parseRoute from './parseRoute.coffee'
 	route = parseRoute(location)
 	navigate = (url, options = { replace: false }) ->
