--- a/src/ui/product/generic/Button.pug
+++ b/src/ui/product/generic/Button.pug
@@ -1,6 +1,6 @@
 script.
+	import hotkey from './useActions/hotkey.coffee'
 	import KeyLabel from './KeyLabel.pug'
-	import hotkey from '../../mixins/hotkey.coffee'
 	export action = null
 	export activated = false
 	export disabled = false
