--- a/src/ui/product/listing/Listing.pug
+++ b/src/ui/product/listing/Listing.pug
@@ -1,8 +1,8 @@
 script.
 	import api from '../../../api/index.js'
-	import Comment from '../content/Comment.pug'
-	import Headline from '../content/Headline.pug'
-	import Post from '../content/Post.pug'
+	import Comment from '../post/Comment.pug'
+	import Headline from '../post/Headline.pug'
+	import Post from '../post/Post.pug'
 	export id = null
 	itemIds = null
 	loading = false
