--- a/src/ui/product/post/Comment.pug
+++ b/src/ui/product/post/Comment.pug
@@ -1,8 +1,8 @@
 script.
 	import api from '../../../api/index.js'
-	import StringFormat from '../../tools/StringFormat.coffee'
-	import ActionText from '../system/ActionText.pug'
-	import Avatar from './Avatar.pug'
+	import StringFormat from '../../../lib/StringFormat.coffee'
+	import ActionText from '../generic/ActionText.pug'
+	import Avatar from '../user/Avatar.pug'
 	import Score from './Score.pug'
 	export id = null
 	export showReplies = true
