--- a/src/ui/product/post/Headline.pug
+++ b/src/ui/product/post/Headline.pug
@@ -1,7 +1,7 @@
 script.
 	import api from '../../../api/index.js'
 	import Time from '../../../lib/Time.coffee'
-	import StringFormat from '../../tools/StringFormat.coffee'
+	import StringFormat from '../../../lib/StringFormat.coffee'
 	import Score from './Score.pug'
 	export id = null
 	export selected = false
