--- a/src/ui/product/post/Post.pug
+++ b/src/ui/product/post/Post.pug
@@ -1,13 +1,13 @@
 script.
 	import api from '../../../api/index.js'
 	import Time from '../../../lib/Time.coffee'
-	import StringFormat from '../../tools/StringFormat.coffee'
-	import ActionText from '../system/ActionText.pug'
-	import Button from '../system/Button.pug'
-	import MediaPlayer from '../system/MediaPlayer.pug'
-	import Avatar from './Avatar.pug'
+	import StringFormat from '../../../lib/StringFormat.coffee'
+	import ActionText from '../generic/ActionText.pug'
+	import Button from '../generic/Button.pug'
+	import Avatar from '../user/Avatar.pug'
 	import Comment from './Comment.pug'
 	import Flair from './Flair.pug'
+	import MediaPlayer from './MediaPlayer.pug'
 	import Score from './Score.pug'
 	export id = null
 	post = null
