--- a/src/ui/product/post/Score.pug
+++ b/src/ui/product/post/Score.pug
@@ -1,5 +1,5 @@
 script.
-	import StringFormat from '../../tools/StringFormat.coffee'
+	import StringFormat from '../../../lib/StringFormat.coffee'
 	export value = null
 
 button.score
