--- a/src/ui/product/stylesheet.styl
+++ b/src/ui/product/stylesheet.styl
@@ -141,4 +141,4 @@ input
 	font-family 'inter'
 	font-style normal italic
 	font-weight 100 900
-	src url('../assets/fonts/font_inter_var.woff2') format('woff2')
+	src url('./font_inter_var.woff2') format('woff2')
