--- a/src/ui/product/post/MediaPlayer.pug
+++ b/src/ui/product/post/MediaPlayer.pug
@@ -1,7 +1,7 @@
 script.
 	import Time from '../../../lib/Time.coffee'
-	import StringFormat from '../../tools/StringFormat.coffee'
-	import Button from './Button.pug'
+	import StringFormat from '../../../lib/StringFormat.coffee'
+	import Button from '../generic/Button.pug'
 	import { onMount } from 'svelte'
 	export audio_url = null
 	export mimic_gif = false
