--- a/src/ui/product/user/Avatar.pug
+++ b/src/ui/product/user/Avatar.pug
@@ -1,7 +1,7 @@
 script.
 	import api from '../../../api/index.js'
 	import Time from '../../../lib/Time.coffee'
-	import StringFormat from '../../tools/StringFormat.coffee'
+	import StringFormat from '../../../lib/StringFormat.coffee'
 	export username = null
 	userInfo = null
 	userInfoPopupVisible = false
