routing: add subreddit/post relationship

--- a/src/ui/infra/Router.pug
+++ b/src/ui/infra/Router.pug
@@ -1,5 +1,6 @@
 script.
-	import Listing from '../product/listing/Listing.pug'
+	import Post from '../product/post/Post.pug'
+	import Subreddit from '../product/subreddit/Subreddit.pug'
 	import parseRoute from './parseRoute.coffee'
 	route = parseRoute(location)
 	navigate = (url, options = { replace: false }) ->
@@ -7,12 +8,14 @@ script.
 			history.replaceState(null, null, url)
 		else
 			history.pushState(null, null, url)
-	document.addEventListener('click',
+	document.addEventListener('mousedown',
 		(event) ->
-			if event.button is 0 and not (event.altKey or event.ctrlKey or event.metaKey or event.shiftKey) and event.target.tagName is 'A' and event.target.origin is origin
-				navigate(new URL(event.target.href))
-				route = parseRoute(location)
-				event.preventDefault())
+			if event.button is 0 and not (event.altKey or event.ctrlKey or event.metaKey or event.shiftKey)
+				parentLink = event.target.closest('a')
+				if parentLink? and parentLink.origin is origin
+					navigate(new URL(parentLink.href))
+					route = parseRoute(location)
+					event.preventDefault())
 	document.addEventListener('keydown',
 		(event) ->
 			if event.key is 'Enter' and not (event.altKey or event.ctrlKey or event.metaKey or event.shiftKey) and event.target.tagName is 'A' and event.target.origin is origin
@@ -24,9 +27,10 @@ script.
 			route = parseRoute(location)
 			event.preventDefault())
 
-{#if route.path === 'subreddit'}
-	{#key route}
-		Listing(id="subreddit_posts:{route.data.name}:{route.data.sort}:10")
+{#if route.path === 'post'}
+	Post(shortId={route.data.post_short_id})
+{:else if route.path === 'subreddit'}
+	Subreddit(name={route.data.subreddit_name} sort={route.data.posts_sort})
 {:else}
 	h1 The requested page is not supported yet.
 	dl
