routing: activate outbound links on mousedown

--- a/src/ui/infra/Router.pug
+++ b/src/ui/infra/Router.pug
@@ -12,10 +12,14 @@ script.
 		(event) ->
 			if event.button is 0 and not (event.altKey or event.ctrlKey or event.metaKey or event.shiftKey)
 				parentLink = event.target.closest('a')
-				if parentLink? and parentLink.origin is origin
-					navigate(new URL(parentLink.href))
-					route = parseRoute(location)
-					event.preventDefault())
+				if parentLink?
+					if parentLink.origin is origin
+						navigate(new URL(parentLink.href))
+						route = parseRoute(location)
+						event.preventDefault()
+					else
+						location.href = parentLink.href
+						event.preventDefault())
 	document.addEventListener('keydown',
 		(event) ->
 			if event.key is 'Enter' and not (event.altKey or event.ctrlKey or event.metaKey or event.shiftKey) and event.target.tagName is 'A' and event.target.origin is origin
