--- a/src/ui/infra/Router.pug
+++ b/src/ui/infra/Router.pug
@@ -1,6 +1,7 @@
 script.
 	import Post from '../product/post/Post.pug'
 	import Subreddit from '../product/subreddit/Subreddit.pug'
+	import WikiPage from '../product/wiki/WikiPage.pug'
 	import parseRoute from './parseRoute.coffee'
 	route = parseRoute(location)
 	navigate = (url, options = { replace: false }) ->
@@ -14,15 +15,16 @@ script.
 				parentLink = event.target.closest('a')
 				if parentLink?
 					if parentLink.origin is origin
-						navigate(new URL(parentLink.href))
-						route = parseRoute(location)
-						event.preventDefault()
+						if parentLink.pathname != location.pathname
+							navigate(new URL(parentLink.href))
+							route = parseRoute(location)
+							event.preventDefault()
 					else
 						location.href = parentLink.href
 						event.preventDefault())
 	document.addEventListener('keydown',
 		(event) ->
-			if event.key is 'Enter' and not (event.altKey or event.ctrlKey or event.metaKey or event.shiftKey) and event.target.tagName is 'A' and event.target.origin is origin
+			if event.key is 'Enter' and not (event.altKey or event.ctrlKey or event.metaKey or event.shiftKey) and event.target.tagName is 'A' and event.target.origin is origin and event.target.pathname != location.pathname
 				navigate(new URL(event.target.href))
 				route = parseRoute(location)
 				event.preventDefault())
@@ -35,6 +37,9 @@ script.
 	Post(shortId={route.data.post_short_id})
 {:else if route.path === 'subreddit'}
 	Subreddit(name={route.data.subreddit_name} sort={route.data.posts_sort})
+{:else if route.path === 'wiki_page'}
+	{#key route}
+		WikiPage(page_name={route.data.page_name} revision_id={route.data.revision_id} subreddit_name={route.data.subreddit_name})
 {:else}
 	h1 The requested page is not supported yet.
 	dl
